fix: Resolve frontend and backend startup/communication issues
- Fix DB_PORT parsing in backend app.module.ts.
- Install missing class-validator and class-transformer in backend.
- Add healthcheck to DB service in docker-compose.yml for reliable backend startup.
- Configure explicit CORS in backend main.ts and add global ValidationPipe.
- Correct frontend API URLs to http://localhost:3001 for browser access.
- Implement manual nickname duplication check button in frontend.
- Resolve frontend TypeScript compilation errors and React Hook warnings.
- Remove debugging console.log statements.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,6 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./frontend:/app
-      - /app/node_modules
     ports:
       - "3000:3000"
     stdin_open: true
@@ -23,11 +22,11 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./backend:/usr/src/app
-      - /usr/src/app/node_modules
     ports:
       - "3001:3000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       - DB_HOST=db
       - DB_PORT=3306
@@ -50,6 +49,11 @@ services:
       - "3306:3306"
     volumes:
       - db-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uuser", "-ppassword"]
+      timeout: 20s
+      retries: 10
+      start_period: 30s
 
 volumes:
   db-data:
